[CSS] Fix wrong proximity calculation for implicit @scope https://bugs.webkit.org/show_bug.cgi?id=270900 rdar://124640124

Reviewed by Antti Koivisto.

The previous code was wrongly trying to locate the distance
of the element to the @scope owner node (the <style> node),
while it should locate the distance to the parent of the owner node.

* LayoutTests/fast/css/scope-at-rule-expected.html:
* LayoutTests/fast/css/scope-at-rule.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/scope-implicit-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/scope-implicit.html:
* Source/WebCore/style/ElementRuleCollector.cpp:
(WebCore::Style::ElementRuleCollector::scopeRulesMatch):

Canonical link: https://commits.webkit.org/276345@main